<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>kjj_real</name>
  <version>1.0.2</version>
  <description>ROS-2 Simulation packages for robot</description>
  <maintainer email="kim87@kimm.re.kr">Sanghyun Kim</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <export>
    <build_type>ament_cmake</build_type>
    <gazebo_ros gazebo_model_path="${prefix}/.." />
    <gazebo_ros gazebo_model_path="${prefix}/models" />
  </export>
</package>
